src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_in_basic.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
let count = 0
for v in [1, 2, 3, 4, 5] {
  print(v)
  count += 1
}
assert_eq(count, 5)

OK
Nil

STDOUT
1
2
3
4
5
