src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_in_empty.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
let count = 0
for v in [] {
  count += 1
}
assert_eq(count, 0)

OK
Nil
