src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_in_explicit_iter.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
// Using an explicit iterator
let sum = 0
for v in list_iter([10, 20, 30]) {
  sum += v
}
assert_eq(sum, 60)

OK
Nil
