src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_in_nested.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
let result = []
for outer in [[1, 2], [3, 4]] {
  for inner in outer {
    append(result, inner)
  }
}
// Verify by checking length and elements
assert_eq(list_len(result), 4)
assert_eq(result[0], 1)
assert_eq(result[1], 2)
assert_eq(result[2], 3)
assert_eq(result[3], 4)

OK
Nil
