src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_in_nil.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
// List with nil items - iteration stops at first nil
let count = 0
for v in [1, nil, 3] {
  count += 1
}
// Should iterate only once (stops at nil)
assert_eq(count, 1)

OK
Nil
