src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__for_in_with_vars.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
//module
let list = [1, 2, 3]
let sum = 0
for v in list {
  let doubled = v * 2
  sum += doubled
}
assert_eq(sum, 12)  // (1*2)+(2*2)+(3*2) = 12

OK
Nil
